--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,41 @@
-# Ignore .log files
+## Ignore .log files
 *.log
 
-#Ignore dot files
+## Ignore env files
 .env
 .DS_Store
 
-#Ignore Firebase Secret files
+## Ignore Firebase Secret files
+GoogleService-Info.plist
 
-
-#Ignore Test files
+## Ignore Test files
 MitraTests
 MitraUITests
+
+## User settings
+xcuserdata/
+
+## Obj-C/Swift specific
+*.hmap
+
+## App packaging
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+## Swift Package Manager
+Packages/
+Package.pins
+Package.resolved
+*.xcodeproj
+
+## Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata hence it is not needed unless you have added a package configuration file to your project
+.swiftpm
+.build/
+
+## Redundant Dependency Management
+Pods/
